# parallact

./: .gitignore  parallact.g4
executorLibrary/: executor.cpp  executor.h  main.cpp
parallactParser/: CMakeLists.txt  main.cpp  parallact.interp  parallact.tokens  parallactBaseVisitor.cpp  parallactBaseVisitor.h  parallactLexer.cpp  parallactLexer.h  parallactLexer.interp  parallactParser.cpp  parallactParser.h  parallactUserVisitor.cpp  parallactUserVisitor.h  parallactVisitor.cpp  parallactVisitor.h
projects/: CMakeLists.txt
projects/cmake/: function.cmake
projects/executor/: CMakeLists.txt  executor.cpp  executor.hpp
projects/utils/: CMakeLists.txt  utils.hpp
